--- a/Models/Daily_female_birth_CL_ Tube_loss.ipynb
+++ b/Models/Daily_female_birth_CL_ Tube_loss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "id": "5iG0BCUu7Vuk"
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\aades\\Downloads\\LSTM_Experiment\\LSTM_Experiment\\Datasets\\daily-total-female-births-CA.csv',index_col='date', parse_dates=True)\n",
+    "df = pd.read_csv('Minz31/Probablistic-Forecasting/Datasets/daily-total-female-births-CA.csv',index_col='date', parse_dates=True)\n",
     "df[\"births\"]=df[\"births\"].astype(float)\n",
     "df.head()"
    ]
